--- a/_sass/utilities/_layout.scss
+++ b/_sass/utilities/_layout.scss
@@ -2,6 +2,19 @@
 
 // Display utilities
 .d-none { display: none; }
+
+// Accessibility utilities
+.visually-hidden {
+  position: absolute !important;
+  width: 1px !important;
+  height: 1px !important;
+  padding: 0 !important;
+  margin: -1px !important;
+  overflow: hidden !important;
+  clip: rect(0, 0, 0, 0) !important;
+  white-space: nowrap !important;
+  border: 0 !important;
+}
 .d-block { display: block; }
 .d-inline { display: inline; }
 .d-inline-block { display: inline-block; }
